# TraceLift

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: deepspeed_zero2_bf16_grpo.json  deepspeed_zero3_bf16.json  deepspeed_zero3_bf16_grpo.json
configs/grpo/: code_exec_only.sh  code_reason_exec.sh  math_exec_only.sh  math_reason_exec.sh
configs/rm/: train_code_rm_qwen25_7b_instruct.sh  train_math_rm_qwen25_7b_instruct.sh
scripts/: __init__.py  build_code_test_oracles.py  build_math_rm_groups.py  merge_lora_policy.py  merge_lora_reward_model.py  train_code_grpo.py  train_math_grpo_trl.py
src/reasonrm/: __init__.py  code_oracle.py  data.py  init_reward_model.py  modeling_reward.py  prepare_code_rm_data.py  split_code_rm_groups.py  train_reward_model.py
src/tracelift/: __init__.py  reward_utils.py
